deploy/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: balldontlie-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/limit-rpm: 60
spec:
  tls:
  - hosts:
    - www.balldontlie.io
    secretName: balldontlie-tls
  rules:
  - host: www.balldontlie.io
    http:
      paths:
        - path: /api
          backend:
            serviceName: balldontlie
            servicePort: 80
        - path: /
          backend:
            serviceName: balldontlie-client
            servicePort: 8080
